// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splitter The mousemove should work fine. 1`] = `
<div>
  <div
    class="ant-splitter ant-splitter-horizontal"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: calc(60% - 1px);"
    >
      0
    </div>
    <div
      class="ant-splitter-bar"
      style="flex-basis: 2px;"
    >
      <div
        class="ant-splitter-bar-area"
      />
      <div
        class="ant-splitter-bar-resizable"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: calc(40% - 1px);"
    >
      1
    </div>
  </div>
</div>
`;

exports[`Splitter should correct render 1`] = `
<div>
  <div
    class="ant-splitter ant-splitter-horizontal"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: calc(50% - 1px);"
    >
      0
    </div>
    <div
      class="ant-splitter-bar"
      style="flex-basis: 2px;"
    >
      <div
        class="ant-splitter-bar-area"
      />
      <div
        class="ant-splitter-bar-resizable"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: calc(50% - 1px);"
    >
      1
    </div>
  </div>
</div>
`;
